deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - name: test
          image: osamapatel/spa-frontend
          ports:
            - containerPort: 3000
        - name: test2
          image: osamapatel/test-image
          ports:
            - containerPort: 3000
