services.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000 
  type: ClusterIP
